testdata/fixtures/review/negative/debug_bare_print_py.py
def compute(a, b):
    print("result", a + b)
    return a + b
